<resources>
    <string name="app_name">Demo</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="add_product">Add new product</string>
    <string name="sku">Sku</string>
    <string name="product_name">Product name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="unit">Unit</string>
    <string name="status">Status</string>
    <string name="edit_product_title">Edit product</string>
    <string name="add_product_success_greeting">Add new product success!</string>
    <string name="update_action">Update</string>
    <string name="update_product_success_greeting">Update product success!</string>
    <string name="action">Action</string>
    <string name="register">Register</string>
    <string name="token_expired_message">Your token has been expired, please login to continue</string>
    <string name="search">Search</string>
    <string name="product_list_title">Product list</string>
</resources>